# riva

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
example/: Cargo.toml
example/src/: main.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/providers/: mod.rs
src/providers/soundcloud/: extractor.rs  mod.rs  models.rs  normalize.rs
src/providers/youtube/: extractor.rs  mod.rs  models.rs  normalize.rs  signature.rs  validator.rs
tests/: normalization.rs
