[package]
name = "riva"
version = "0.1.0"
edition = "2024"

[features]
default = ["youtube", "soundcloud"]
youtube = []
soundcloud = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"
regex = "1"
once_cell = "1"