[package]
name = "riva"
version = "0.1.0"
edition = "2024"
description = "Provider-agnostic Rust library for extracting normalized media stream metadata from SoundCloud and YouTube via async helpers."
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/resonix-dev/riva"
homepage = "https://github.com/resonix-dev/riva"
documentation = "https://docs.rs/riva"
keywords = ["soundcloud", "youtube", "extractor", "media", "async"]
categories = ["api-bindings", "multimedia::audio", "web-programming::http-client"]

[features]
default = ["youtube", "soundcloud"]
youtube = []
soundcloud = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"
regex = "1"
once_cell = "1"

[badges]
github-actions = { repository = "resonix-dev/riva", workflow = "CI" }
maintenance = { status = "actively-developed" }