[package]
name = "riva"
version = "1.0.0"
edition = "2024"
description = "Server-backed Rust client for the Riva proxy (YouTube and SoundCloud)."
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/resonix-dev/riva"
homepage = "https://github.com/resonix-dev/riva"
documentation = "https://docs.rs/riva"
keywords = ["soundcloud", "youtube", "proxy", "media", "async"]
categories = ["api-bindings", "multimedia::audio", "web-programming::http-client"]

[features]
default = ["youtube", "soundcloud"]
youtube = []
soundcloud = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"
